For the latest news, visit the SparForte web site.

SparForte 2.0.x's focus was bug fixes for SparForte 2.0

CHANGES SINCE 2.0.3

1. Fix: backquoted strings cannot be used as a Bourne shell command.

2. Fix: type error when using env; to show all parameters, resulting from new parameterized generic type handling error, has been fixed.
