@@ -45,7 +45,7 @@ package world is
 -- Global Variables / Flags
 ------------------------------------------------------------------------------
 
-version   : constant string := "2.0.3";
+version   : constant string := "2.0.4";
 copyright : constant string :=  " Copyright (c)2001-2017 Free Software Foundation";
 
 random_generator : ada.numerics.float_random.generator;
